@@ -22,9 +22,13 @@ fi
 wget http://www.loria.fr/~zimmerma/mpfr-3.2.0-dev.tar.bz2
 tar jxf mpfr-3.2.0-dev.tar.bz2
 cd  mpfr-3.2.0-dev
-./configure --with-gmp=$HOME --prefix=$HOME
+if [ "`hostname`" = "dingo" ]; then
+   # http://websympa.loria.fr/wwsympa/arc/mpfr/2011-10/msg00048.html
+   ./configure --with-gmp=$HOME --disable-thread-safe
+else
+   ./configure --with-gmp=$HOME
+fi
 make
-make install
 make check
 
 # results with mpfr-3.1.0-rc1.tar.bz2
