@@ -25,6 +25,8 @@ Changes from versions 3.1.* to version 3.2.0:
 - New functions: mpfr_fpif_export and mpfr_fpif_import to export and import
   numbers in a floating-point interchange format, independent both on the
   number of bits per word and on the endianness.
+- New function mpfr_fmodquo to return the low bits of the quotient
+  corresponding to mpfr_fmod.
 - Updated tuning parameters.
 - Improved MPFR manual.
 - Bug fixes.
